[package]
name = "family-graph"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
calamine = "0.25.0"
petgraph = "0.8.2"
wasm-bindgen = "0.2.100"
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
actix-web = "4.11.0"
env_logger = "0.11.8"
actix-files = "0.6.6"
wasm-pack = "0.13.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
]
