[package]
name = "family_tree"
version = "0.1.0"
edition = "2024"

[lib]
name = "family_tree"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
# Always included
petgraph = "0.8.2"
calamine = "0.28.0"
serde = { version = "1.0", features = ["derive"] }

wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }



